--- a/.github/workflows/update-widevine.yml
+++ b/.github/workflows/update-widevine.yml
@@ -2,62 +2,64 @@ name: Update WidevineCdm
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Chạy mỗi giờ
-  workflow_dispatch:  # Cho phép chạy thủ công
+    - cron: "0 * * * *"   # chạy mỗi giờ
+  workflow_dispatch:      # cho phép chạy tay
 
 jobs:
-  update-widevine:
+  update:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      
-    - name: Get latest release and download
-      run: |
-        # Lấy thông tin release mới nhất
-        curl -s https://api.github.com/repos/bibicadotnet/microsoft-edge-multi-portable/releases \
-          | jq -r '[.[] | select(.tag_name | contains("edge-canary-portable-x64"))] | .[0] | .assets[0].browser_download_url' \
-          | xargs curl -L -o release.zip
-        
-        # Giải nén đơn giản
-        7z x release.zip
-        
-        # Tìm thư mục WidevineCdm
-        WIDEVINE_PATH=$(find . -name "WidevineCdm" -type d | head -1)
-        
-        if [ -z "$WIDEVINE_PATH" ]; then
-          echo "Không tìm thấy thư mục WidevineCdm"
-          exit 1
-        fi
-        
-        echo "WIDEVINE_PATH=$WIDEVINE_PATH" >> $GITHUB_ENV
-        
-    - name: Check versions and update
-      run: |
-        # Đọc version mới từ file vừa download
-        NEW_VERSION=$(jq -r '.version' "$WIDEVINE_PATH/manifest.json")
-        
-        # Đọc version hiện tại từ repo
-        if [ -f "WidevineCdm/manifest.json" ]; then
-          CURRENT_VERSION=$(jq -r '.version' "WidevineCdm/manifest.json")
-        else
-          CURRENT_VERSION="không có"
-        fi
-        
-        echo "Version hiện tại: $CURRENT_VERSION"
-        echo "Version mới: $NEW_VERSION"
-        
-        if [ "$NEW_VERSION" != "$CURRENT_VERSION" ]; then
-          echo "Cập nhật WidevineCdm..."
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Download latest Edge Canary Portable
+        run: |
+          url=$(curl -s https://api.github.com/repos/bibicadotnet/microsoft-edge-multi-portable/releases/latest \
+            | grep browser_download_url \
+            | grep canary-portable-x64 \
+            | cut -d '"' -f 4)
+          echo "Download URL: $url"
+          curl -L "$url" -o edge-canary.zip
+          unzip -q edge-canary.zip -d edge-canary
+
+      - name: Compare Widevine versions
+        id: compare
+        run: |
+          NEW_MANIFEST=$(find edge-canary -path "*/WidevineCdm/manifest.json" | head -n1)
+          OLD_MANIFEST="WidevineCdm/manifest.json"
+
+          if [ ! -f "$NEW_MANIFEST" ]; then
+            echo "Không tìm thấy manifest mới"
+            exit 1
+          fi
+
+          new_version=$(jq -r '.version' "$NEW_MANIFEST")
+          old_version=$(jq -r '.version' "$OLD_MANIFEST")
+
+          echo "new_version=$new_version"
+          echo "old_version=$old_version"
+
+          if [ "$new_version" != "$old_version" ]; then
+            echo "update_needed=true" >> $GITHUB_OUTPUT
+            echo "new_version=$new_version" >> $GITHUB_OUTPUT
+          else
+            echo "update_needed=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Update WidevineCdm
+        if: steps.compare.outputs.update_needed == 'true'
+        run: |
+          NEW_WIDEVINE=$(dirname $(find edge-canary -path "*/WidevineCdm/manifest.json" | head -n1))
           rm -rf WidevineCdm
-          cp -r "$WIDEVINE_PATH" WidevineCdm
-          
-          git config user.name "GitHub Action"
-          git config user.email "action@github.com"
-          git add WidevineCdm/
-          git commit -m "Update WidevineCdm to $NEW_VERSION"
+          cp -r "$NEW_WIDEVINE" ./WidevineCdm
+
+      - name: Commit & push
+        if: steps.compare.outputs.update_needed == 'true'
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add WidevineCdm
+          git commit -m "Update WidevineCdm to version ${{
+            steps.compare.outputs.new_version }}"
           git push
-        else
-          echo "Đã là version mới nhất rồi"
-        fi
