--- a/.github/workflows/update-widevine.yml
+++ b/.github/workflows/update-widevine.yml
@@ -17,6 +17,10 @@ jobs:
     - name: Download and update
       shell: bash
       run: |
+        # Create temp directory
+        mkdir temp
+        cd temp
+        
         # Get latest ungoogled-chromium release
         URL=$(curl -s https://api.github.com/repos/macchrome/winchrome/releases | jq -r '[.[] | select(.prerelease == false)] | .[0] | .assets[] | select(.name | test("ungoogled-chromium-.*_Win64\\.7z$")) | .browser_download_url')
         
@@ -27,13 +31,35 @@ jobs:
         curl -L "$URL" -o "$FILENAME"
         
         # Extract
-        ./7zr.exe x "$FILENAME"
+        ../7zr.exe x "$FILENAME"
         
-        # Find the extracted directory
-        DIR_NAME=$(ls -d ungoogled-chromium-*_Win64)
+        # Find WidevineCdm directory
+        WIDEVINE_PATH=$(find . -name "WidevineCdm" -type d | head -1)
         
         # Get new version
-        NEW_VERSION=$(jq -r '.version' "$DIR_NAME/$DIR_NAME/WidevineCdm/manifest.json")
+        NEW_VERSION=$(jq -r '.version' "$WIDEVINE_PATH/manifest.json")
         
-        # Skip version check for now - just run debug
-        echo "Debug complete"
+        # Get current version
+        CURRENT_VERSION=""
+        if [ -f "../WidevineCdm/manifest.json" ]; then
+          CURRENT_VERSION=$(jq -r '.version' ../WidevineCdm/manifest.json)
+        fi
+        
+        echo "Current: $CURRENT_VERSION"
+        echo "New: $NEW_VERSION"
+        
+        # Update if different
+        if [ "$NEW_VERSION" != "$CURRENT_VERSION" ]; then
+          echo "Updating WidevineCdm..."
+          cd ..
+          rm -rf WidevineCdm
+          cp -r "temp/$WIDEVINE_PATH" WidevineCdm
+          
+          git config user.name "GitHub Action"
+          git config user.email "action@github.com"
+          git add WidevineCdm/
+          git commit -m "Update WidevineCdm to $NEW_VERSION"
+          git push
+        else
+          echo "Already up to date"
+        fi
